# test_opencv

./: .gitignore  CMakeLists.txt
include/: log_util.h
src/: bit_image_test.cpp  camera_test.cpp  face_certify.cpp  image_zoom_test.cpp  test_opencv.cpp
